overlays/production-monitoring/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - jitsi.peopleundercloud.com
    secretName: jitsi-peopleundercloud-tls
  rules:
    - host: jitsi.peopleundercloud.com
      http:
        paths:
        # only match /grafana and paths under /grafana/
        - pathType: Prefix
          path: /grafana(/|$)(.*)
          backend:
            service:
              name: grafana
              port:
                number: 80
